// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withLazyReducer 1`] = `
<div>
  <div>
    DelayContainer 
    {"store":{"a":"a","b":"x"}}
  </div>
</div>
`;

exports[`withLazyReducer 2`] = `
<div>
  <div>
    InnerComponent 
    {"store":{"a":"a","b":"x","nameX":null}}
  </div>
</div>
`;

exports[`withLazyReducer 3`] = `
<div>
  <div>
    InnerComponent 
    {"store":{"a":"a","b":"x","nameX":null,"reducerWithFun":"reducerWithFun"}}
  </div>
  <div>
    InnerComponent 
    {"store":{"a":"a","b":"x","nameX":null,"reducerWithFun":"reducerWithFun"}}
  </div>
</div>
`;
